--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,7 +92,7 @@ stages:
 
       - publish: config
         displayName: Publish Signing Scripts
-        artifact: config
+        artifact: configs
 
         
 - stage: CodeSign
@@ -121,8 +121,8 @@ stages:
               .\SignClient "Sign" `
               --baseDirectory "$(Pipeline.Workspace)\BuildPackages" `
               --input "**/*.nupkg" `
-              --config "$(Pipeline.Workspace)\config\SignClient.json" `
-              --filelist "$(Pipeline.Workspace)\config\filelist.txt" `
+              --config "$(Pipeline.Workspace)\configs\SignClient.json" `
+              --filelist "$(Pipeline.Workspace)\configs\filelist.txt" `
               --user "$(SignClientUser)" `
               --secret "$(SignClientSecret)" `
               --name "Code Sign packages" `
