--- a/src/Microsoft.OData.Extensions.Migration/Microsoft.OData.Extensions.Migration.Nightly.nuspec
+++ b/src/Microsoft.OData.Extensions.Migration/Microsoft.OData.Extensions.Migration.Nightly.nuspec
@@ -15,18 +15,22 @@
     <tags>Microsoft Extensions OData Migration AspNetCore</tags>
     <dependencies>
       <group targetFramework=".NETStandard2.0">
-        <dependency id="Microsoft.AspNetCore.Http.Abstractions" version="2.1.1" exclude="Build,Analyzers" />
         <dependency id="Microsoft.AspNetCore.Mvc" version="2.1.1" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.AspNetCore.OData" version="7.0.1" exclude="Build,Analyzers" />
+        <dependency id="Microsoft.AspNetCore.OData" version="7.4.0" exclude="Build,Analyzers" />
         <dependency id="Microsoft.Data.Edm" version="5.8.4" exclude="Build,Analyzers" />
         <dependency id="Microsoft.Data.OData" version="5.8.4" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.OData.Core" version="7.5.1" exclude="Build,Analyzers" />
-        <dependency id="Microsoft.OData.Edm" version="7.5.1" exclude="Build,Analyzers" />
+      </group>
+      <group targetFramework=".NETCoreApp3.1">
+        <dependency id="Microsoft.AspNetCore.OData" version="7.4.0" exclude="Build,Analyzers" />
+        <dependency id="Microsoft.Data.Edm" version="5.8.4" exclude="Build,Analyzers" />
+        <dependency id="Microsoft.Data.OData" version="5.8.4" exclude="Build,Analyzers" />
       </group>
     </dependencies>
   </metadata>
   <files>
-    <file src="$ProductRoot$\Microsoft.OData.Extensions.Migration.dll" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Microsoft.OData.Extensions.Migration.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.Migration.dll" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.Migration.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\netcoreapp3.1\Microsoft.OData.Extensions.Migration.dll" target="lib\netcoreapp3.1" />
+    <file src="$ProductRoot$\netcoreapp3.1\Microsoft.OData.Extensions.Migration.pdb" target="lib\netcoreapp3.1" />
   </files>
 </package>
