--- a/src/Microsoft.OData.Extensions.Migration/Microsoft.OData.Extensions.Migration.Release.nuspec
+++ b/src/Microsoft.OData.Extensions.Migration/Microsoft.OData.Extensions.Migration.Release.nuspec
@@ -10,8 +10,8 @@
     <summary>The OData Migration library provides ASP.NET Core 2.2+ OData V4 services with the capability of handling and responding to OData V3 requests. An OData V4 service that uses the OData Migration Library may appear to an OData V3 client as the equivalent V3 service. This may be useful to you if you have migrated your service from OData V3 to OData V4, but wish to bridge the gap between your newly migrated V4 service and your OData V3 clients.</summary>
     <language>en-US</language>
     <projectUrl>http://github.com/OData/Extensions</projectUrl>
-    <license type="expression">MIT</license>
-    <requireLicenseAcceptance>true</requireLicenseAcceptance>
+    <!-- <license type="expression">MIT</license>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance> -->
     <tags>Microsoft Extensions OData Migration AspNetCore</tags>
     <dependencies>
       <group targetFramework=".NETStandard2.0">
