--- a/src/Microsoft.OData.Extensions.Client.Abstractions/Microsoft.OData.Extensions.Client.Abstractions.Nightly.nuspec
+++ b/src/Microsoft.OData.Extensions.Client.Abstractions/Microsoft.OData.Extensions.Client.Abstractions.Nightly.nuspec
@@ -3,7 +3,7 @@
     <metadata>
         <id>Microsoft.OData.Extensions.Client.Abstractions</id>
         <title>Microsoft Extensions OData Client.Abstractions</title>
-        <version>$VersionFullSemantic$-Nightly$NightlyBuildVersion$</version>
+        <version>$version$-Nightly$NightlyBuildVersion$</version>
         <authors>OData (.NET Foundation)</authors>
         <copyright>&#169; .NET Foundation and Contributors. All rights reserved.</copyright>
         <description>This package contains the abstract codes you need to create OData client.</description>
@@ -13,13 +13,15 @@
         <license type="expression">MIT</license>
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
         <tags>Microsoft Extensions ODataClient AspNetCore</tags>
-        <dependencies>
-            <dependency id="Microsoft.OData.Client" version="$ODataClientPackageDependency$" />
+        <dependencies >
+            <group targetFramework=".NETStandard2.0">
+                <dependency id="Microsoft.OData.Client" version="$ODataClientPackageDependency$" />
+            </group>
         </dependencies>
     </metadata>
   <files>
-    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.Client.Abstractions.dll" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.Client.Abstractions.pdb" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\Desktop\Microsoft.OData.Extensions.Client.Abstractions.xml" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.Client.Abstractions.dll" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.Client.Abstractions.pdb" target="lib\netstandard2.0" />
+    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.Client.Abstractions.xml" target="lib\netstandard2.0" />
   </files>
 </package>
