--- a/src/Microsoft.OData.Extensions.Migration/Microsoft.OData.Extensions.Migration.Nightly.nuspec
+++ b/src/Microsoft.OData.Extensions.Migration/Microsoft.OData.Extensions.Migration.Nightly.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Microsoft.OData.Extensions.Migration</id>
     <title>Microsoft Extensions OData Migration</title>
-    <version>$VersionFullSemantic$-Nightly$NightlyBuildVersion$</version>
+    <version>$version$-Nightly$NightlyBuildVersion$</version>
     <authors>OData (.NET Foundation)</authors>
     <copyright>&#169; .NET Foundation and Contributors. All rights reserved.</copyright>
     <description>The package contains the OData Migration extension that enables an Asp.Net Core service to serve OData v3 requests</description>
@@ -28,9 +28,9 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.Migration.dll" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\netstandard2.0\Microsoft.OData.Extensions.Migration.pdb" target="lib\netstandard2.0" />
-    <file src="$ProductRoot$\netcoreapp3.1\Microsoft.OData.Extensions.Migration.dll" target="lib\netcoreapp3.1" />
-    <file src="$ProductRoot$\netcoreapp3.1\Microsoft.OData.Extensions.Migration.pdb" target="lib\netcoreapp3.1" />
+    <file src="$productBinPath$\netstandard2.0\Microsoft.OData.Extensions.Migration.dll" target="lib\netstandard2.0" />
+    <file src="$productBinPath$\netstandard2.0\Microsoft.OData.Extensions.Migration.pdb" target="lib\netstandard2.0" />
+    <file src="$productBinPath$\netcoreapp3.1\Microsoft.OData.Extensions.Migration.dll" target="lib\netcoreapp3.1" />
+    <file src="$productBinPath$\netcoreapp3.1\Microsoft.OData.Extensions.Migration.pdb" target="lib\netcoreapp3.1" />
   </files>
 </package>
