add more flexibility to the build pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,10 @@ variables:
   productFiles: 'Microsoft.OData.Extensions.*?(*.dll|*.config|*.pdb)'
   snExe: 'C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\sn.exe'
   snExe64: 'C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\x64\sn.exe'
+  VersionSemanticsClient: '$(VersionSemanticsClient)'
+  VersionSemanticsClientAbstractions: '$(VersionSemanticsClientAbstractions)'
+  VersionSemanticsMigration: '$(VersionSemanticsMigration)'
+  ReleaseSemantics: '$(ReleaseSemantics)'
 
 stages: 
 - stage: Build
@@ -77,7 +81,7 @@ stages:
           custom: pack
           arguments: >
             $(rootDir)\src\Microsoft.OData.Extensions.Client.Abstractions\Microsoft.OData.Extensions.Client.Abstractions.csproj
-            /p:NuspecFile=$(rootDir)\src\Microsoft.OData.Extensions.Client.Abstractions\Microsoft.OData.Extensions.Client.Abstractions.Release.nuspec 
+            /p:NuspecFile=$(rootDir)\src\Microsoft.OData.Extensions.Client.Abstractions\Microsoft.OData.Extensions.Client.Abstractions.$(ReleaseSemantics).nuspec 
             --configuration=$(buildConfiguration) 
             --output=$(Build.ArtifactStagingDirectory)\Packages   
         displayName: Packing Client Abstractions
@@ -88,7 +92,7 @@ stages:
           custom: pack
           arguments: >
             $(rootDir)\src/Microsoft.OData.Extensions.Client\Microsoft.OData.Extensions.Client.csproj
-            /p:NuspecFile=$(rootDir)\src\Microsoft.OData.Extensions.Client\Microsoft.OData.Extensions.Client.Release.nuspec 
+            /p:NuspecFile=$(rootDir)\src\Microsoft.OData.Extensions.Client\Microsoft.OData.Extensions.Client.$(ReleaseSemantics).nuspec 
             --configuration=$(buildConfiguration) 
             --output=$(Build.ArtifactStagingDirectory)\Packages 
         displayName: Packing Client 
@@ -99,7 +103,7 @@ stages:
           custom: pack
           arguments: >
             $(rootDir)\src\Microsoft.OData.Extensions.Migration\Microsoft.OData.Extensions.Migration.csproj 
-            /p:NuspecFile=$(rootDir)\src\Microsoft.OData.Extensions.Migration\Microsoft.OData.Extensions.Migration.Release.nuspec 
+            /p:NuspecFile=$(rootDir)\src\Microsoft.OData.Extensions.Migration\Microsoft.OData.Extensions.Migration.$(ReleaseSemantics).nuspec 
             --configuration=$(buildConfiguration) 
             --output=$(Build.ArtifactStagingDirectory)\Packages 
         displayName: Packing  Migrations
